--- a/src/templates/blocks/header.html
+++ b/src/templates/blocks/header.html
@@ -1,3 +1,15 @@
 <header class="header">
-    <div class="container"></div>
+    <div class="header__inner">
+        <div class="header__logo">
+            <img class="logo" src="./img/logo.svg" alt="Logo">
+        </div>
+        <nav class="header__nav">
+            <a class="header__nav-link header__nav-link--active" href="tours.html">ПУТЕШЕСТВИЯ</a>
+            <a class="header__nav-link" href="boats.html">НАШИ ЯХТЫ</a>
+            <a class="header__nav-link" href="team.html">КОМАНДА</a>
+            <a class="header__nav-link" href="#faq">FAQ</a>
+            <a class="header__nav-link" href="blog.html">БЛОГ</a>
+            <a class="header__btn" href="#footer">НАПИСАТЬ НАМ</a>
+        </nav>
+    </div>
 </header>
