--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,11 +2,12 @@
 <html lang="ru">
 
 @@include('./blocks/head.html',{
-"title": "yacht-travel.com"
+"title": "Yacht Travel"
 })
 
 <body>
     @@include('./blocks/header.html')
+    @@include('./blocks/hero-index.html')
     @@include('./blocks/footer.html')
     <script src="./js/bundle.js"></script>
 </body>
