--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,5 @@
 @import 'modules/variables';
+@import 'modules/mixins';
 @import 'modules/base';
 @import 'modules/header';
+@import 'modules/hero';
