Restructure file and folder sytem

--- a/src/static/scss/modules/_header.scss
+++ b/src/static/scss/modules/_header.scss
@@ -18,7 +18,8 @@ $header__inner_max-width:1329;
     }
 
     &__nav {
-        width: (757/$header__inner_max-width)*100%;
+        width: 90%;
+        max-width: 757px;
         display: flex;
         justify-content: space-between;
         align-items: center;
