--- a/src/static/scss/modules/_hero.scss
+++ b/src/static/scss/modules/_hero.scss
@@ -14,7 +14,7 @@
         background-size: cover;
     }
 
-    &__link {
+    &__btn {
         display: inline-block;
         filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
         font-family: 'Montserrat', sans-serif;
@@ -31,6 +31,11 @@
         opacity: 0.85;
 
         &:hover {
+            opacity: 1;
+        }
+
+        @media(max-width: 768px) {
+            transition: unset;
             opacity: 1;
         }
 
