update tour cards

--- a/src/static/scss/style.scss
+++ b/src/static/scss/style.scss
@@ -3,3 +3,5 @@
 @import 'modules/base';
 @import 'modules/header';
 @import 'modules/hero';
+@import 'modules/closest-tours';
+@import 'modules/tour-card';
