--- a/src/static/scss/modules/_mixins.scss
+++ b/src/static/scss/modules/_mixins.scss
@@ -4,6 +4,7 @@
         serif;
     font-size: 48px;
     line-height: 130%;
+    font-weight: normal;
     color: white;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
@@ -22,6 +23,7 @@
         serif;
     font-size: 30px;
     line-height: 110%;
+    font-weight: normal;
 
     @media(max-width:768px) {
         font-size: 20px;
